--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "semantic-ui": "^2.2.10"
+    "semantic-ui": "^2.2.10",
+    "vue-awesome-swiper": "^2.4.2"
   }
 }
