--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "semantic-ui": "^2.2.10",
-    "vue-awesome-swiper": "^2.4.2"
+    "vue-awesome-swiper": "^2.4.2",
+    "vue-event-calendar": "^1.3.5"
   }
 }
